TU-32: Added UserEvent CRUD
