# src/controllers/event/Event.controller.ts
@@ -2,24 +2,31 @@ import { NextFunction, Request, Response, Router } from 'express';
 import EventService from '../../services/event/Event.service';
 import SportService from '../../services/sport/Sport.service';
 import SportDisciplineNotFoundResponse from '../sport/dto/SportDisciplineNotFoundResponse';
-import EventNotFoundResponse from './dto/EventNotFoundResponse';
-import NotAuthorizedToModifyEventResponse from './dto/NotAuthorizedToModifyEventResponse';
+import EventNotFoundResponse from './dto/EventNotFoundResponse.dto';
+import NotAuthorizedToModifyEventResponse from './dto/NotAuthorizedToModifyEventResponse.dto';
 import authTokenValidation from '../../middleware/authentication/AuthTokenValidation.middleware';
 import dtoValidation from '../../middleware/error-handling/DtoValidation.middleware';
 import CreateEventRequest from './dto/CreateEventRequest.dto';
 import { Controller } from '../../shared/types/Controller';
 import { RequestWithUser } from '../../shared/types/User';
 import { HTTPStatus } from '../../shared/helpers/HTTPStatus';
+import AlreadyEnrolledForEventResponse from './dto/AlreadyEnrolledForEventResponse.dto';
+import NeverEnrolledForEventResponse from './dto/NeverEnrolledForEventResponse.dto';
+import authorizationValidation from '../../middleware/authorization/AuthorizationValidation.middleware';
+import { UserRole } from '../../shared/types/UserRole';
+import UserService from '../../services/user/User.service';
 
 class EventController implements Controller {
   public path = '/sports';
   public router = Router();
   private eventService: EventService;
   private sportService: SportService;
+  private userService: UserService;
 
-  constructor(eventService: EventService, sportService: SportService) {
+  constructor(eventService: EventService, sportService: SportService, userService: UserService) {
     this.eventService = eventService;
     this.sportService = sportService;
+    this.userService = userService;
     this.initializeRoutes();
   }
 
@@ -38,13 +45,36 @@ class EventController implements Controller {
         authTokenValidation,
         dtoValidation(CreateEventRequest),
         this.validateDisciplineExistence,
+        this.validateEventExistence,
         this.updateEvent
       )
       .delete(
         this.path.concat('/:id/events/:eventId'),
         authTokenValidation,
         this.validateDisciplineExistence,
+        this.validateEventExistence,
         this.deleteEvent
+      )
+      .post(
+        this.path.concat('/:id/events/:eventId/enrollment'),
+        authTokenValidation,
+        this.validateDisciplineExistence,
+        this.validateEventExistence,
+        this.enrollForEvent
+      )
+      .delete(
+        this.path.concat('/:id/events/:eventId/enrollment'),
+        authTokenValidation,
+        this.validateDisciplineExistence,
+        this.validateEventExistence,
+        this.unenrollFromEvent
+      )
+      .get(
+        this.path.concat('/:id/events/:eventId/enrollment'),
+        authTokenValidation,
+        this.validateDisciplineExistence,
+        this.validateEventExistence,
+        this.getAllUsersEnrolledForEvent
       );
   }
 
@@ -52,6 +82,15 @@ class EventController implements Controller {
     const disciplineId = request.params.id;
     if (!(await this.sportService.existsById(disciplineId))) {
       next(new SportDisciplineNotFoundResponse());
+    } else {
+      next();
+    }
+  };
+
+  private validateEventExistence = async (request: Request, response: Response, next: NextFunction) => {
+    const eventId = request.params.eventId;
+    if (!(await this.eventService.existsById(eventId))) {
+      next(new EventNotFoundResponse());
     } else {
       next();
     }
@@ -76,12 +115,6 @@ class EventController implements Controller {
     const eventId = requestWithUser.params.eventId;
     const user = requestWithUser.user;
 
-    const eventToEdit = await this.eventService.findById(eventId);
-
-    if (!eventToEdit) {
-      return next(new EventNotFoundResponse());
-    }
-
     if (!(await this.eventService.isUserAuthorizedToModifyEvent(user, eventId))) {
       return next(new NotAuthorizedToModifyEventResponse());
     }
@@ -94,17 +127,49 @@ class EventController implements Controller {
     const eventId = requestWithUser.params.eventId;
     const user = requestWithUser.user;
 
-    const eventToDelete = await this.eventService.findById(eventId);
-
-    if (!eventToDelete) {
-      return next(new EventNotFoundResponse());
-    }
-
     if (!(await this.eventService.isUserAuthorizedToModifyEvent(user, eventId))) {
       return next(new NotAuthorizedToModifyEventResponse());
     }
 
     response.send(await this.eventService.deleteEvent(eventId));
+  };
+
+  private enrollForEvent = async (request: Request, response: Response, next: NextFunction) => {
+    const requestWithUser = request as RequestWithUser;
+    const eventId = requestWithUser.params.eventId;
+    const user = requestWithUser.user;
+
+    const enrollment = await this.eventService.enrollUserForEvent(user._id, eventId);
+    if (!enrollment) {
+      return next(new AlreadyEnrolledForEventResponse());
+    }
+
+    response.send(enrollment);
+  };
+
+  private unenrollFromEvent = async (request: Request, response: Response, next: NextFunction) => {
+    const requestWithUser = request as RequestWithUser;
+    const eventId = requestWithUser.params.eventId;
+    const user = requestWithUser.user;
+
+    if (!(await this.eventService.unenrollUserFromEvent(user._id, eventId))) {
+      return next(new NeverEnrolledForEventResponse());
+    }
+
+    response.sendStatus(HTTPStatus.OK);
+  };
+
+  private getAllUsersEnrolledForEvent = async (request: Request, response: Response, next: NextFunction) => {
+    const requestWithUser = request as RequestWithUser;
+    const eventId = requestWithUser.params.eventId;
+
+    const users = await this.eventService.getUserEnrolledForEventBySportEventId(eventId);
+    if (users) {
+      const prepared = this.userService.prepareDetailsFromUsers(users);
+      response.send(prepared);
+    } else {
+      next(new EventNotFoundResponse());
+    }
   };
 }
 
